2011-05-09  Juanma Barranquero  <lekktu@gmail.com>

	* misc.el: Require tabulated-list.el during compilation.

2011-05-09  Chong Yidong  <cyd@stupidchicken.com>

	* progmodes/compile.el (compilation-start): Run
	compilation-filter-hook for the async case too.
	(compilation-filter-hook): Doc fix.

2011-05-09  Deniz Dogan  <deniz@dogan.se>

	* wdired.el: Remove outdated installation comment.  Fix usage
	comment.

2011-05-09  Juanma Barranquero  <lekktu@gmail.com>

	* misc.el: Implement new command `list-dynamic-libraries'.
	(list-dynamic-libraries--loaded-only-p): New variable.
	(list-dynamic-libraries--refresh): New function.
	(list-dynamic-libraries): New command.

2011-05-09  Chong Yidong  <cyd@stupidchicken.com>

	* progmodes/compile.el (compilation-error-regexp-alist-alist): Fix
	the ant regexp to handle end-line and end-column info from jikes.
	Re-introduce maven regexp.  Give the ruby-Test::Unit regexp a
	higher priority to avoid clobbering by gnu.

2011-05-08  Chong Yidong  <cyd@stupidchicken.com>

	* cus-face.el (custom-declare-face): Call custom-theme-recalc-face
	if the face has existing theme settings (Bug#8454).

2011-05-08  Ralph Schleicher  <rs@ralph-schleicher.de>

	* progmodes/perl-mode.el (perl-imenu-generic-expression): Only
	match variables declared via `my' or `our' (Bug#8261).

	* net/browse-url.el (browse-url-of-dired-file): Allow browsing of
	special file names `.' and `..' (Bug#8259).

2011-05-08  Chong Yidong  <cyd@stupidchicken.com>

	* progmodes/grep.el (grep-mode-font-lock-keywords): Remove
	buffer-changing entries.
	(grep-filter): New function.
	(grep-mode): Add it to compilation-filter-hook.

	* progmodes/compile.el (compilation-filter-hook)
	(compilation-filter-start): New defvars.
	(compilation-filter): Call compilation-filter-hook prior to
	updating the process mark.

2011-05-08  Stefan Monnier  <monnier@iro.umontreal.ca>

	* emacs-lisp/eieio.el (defmethod): Fix typo in last change.

2011-05-07  Eli Zaretskii  <eliz@gnu.org>
